// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UCopyrightLinks.vue Should have the following default markup 1`] = `
<div
  class="hotpink--text text-xs-center pa-1"
>
  <a
    href="http://www.catfacts.co/"
  >
    
    SomethingElse
  
  </a>
  
   
  ©
   
  1998-2018
   
  
  <a
    href="http://www.piedpiper.com/"
  >
    
    PiedPiper
  
  </a>
</div>
`;

exports[`UCopyrightLinks.vue renders props.productName when passed 1`] = `
<div
  class="hotpink--text text-xs-center pa-1"
>
  <a
    href="http://www.catfacts.co/"
  >
    
    sg59PgYRUqI79HW
  
  </a>
  
   
  ©
   
  1998-2018
   
  
  <a
    href="http://www.piedpiper.com/"
  >
    
    PiedPiper
  
  </a>
</div>
`;
